# hbstools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  conda-env.yml  meson.build  pyproject.toml
assets/mercury-gif/: config.yml  demo.yml
hbstools/: __init__.py  data.py  format.py  io.py  meson.build  poissonfocus.py  read.py  search.py  trigger.py  types.py
hbstools/triggers/: __init__.py  bft.py  bft_cwrap.py  cpoissonfocusses.py  meson.build  poissonfocus.py  poissonfocusdes.py  poissonfocusses_cwrap.py  trigger.py
hbstools/triggers/c/: README.md  bft.c  poissonfocus.c  poissonfocusses.c
hbstools/triggers/c/include/: bft.h  poissonfocus.h  poissonfocusses.h
mercury/: config.yml  io.py  mercury-config.yml  mercury.py  meson.build  write.py
tests/: meson.build  test_bft.py  test_binning.py  test_cbft.py  test_cpfs.py  test_crawler.py  test_dataset.py  test_formatting.py  test_histogram.py  test_histogram_quadrants.py  test_merge_overlapping_gtis.py  test_pfd.py  test_poissonfocusdes.py  test_read_event_files.py  test_stream.py
tests/data_100s_stronganomaly60s/: gti.fits  out_lv1_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/data_300s_constant1/: gti.fits  out_lv1_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/data_300s_constant2/: gti.fits  out_lv1_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/data_300s_constant3/: gti.fits  out_lv1_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/data_300s_constant4/: gti.fits  out_lv1_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/data_300s_constant5/: gti.fits  out_lv1_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/data_300s_constant6/: gti.fits  out_lv1_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/data_300s_constant7/: gti.fits  out_lv1_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/test_dataset_light1/: out_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/test_dataset_light2/: out_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/test_dataset_light3/: out_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/test_dataset_light4/: out_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/test_dataset_light5/: out_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/test_dataset_light6/: out_cl.evt  out_s_cl.evt  out_x_cl.evt
tests/data_300s_constant/test_dataset_light7/: out_cl.evt  out_s_cl.evt  out_x_cl.evt
