[tool.poetry]
name = "hbstools"
version = "0.1.0"
description = "A tool for searching GRBs in data from HERMES-Pathfinder"
authors = ["peppedilillo <peppedilillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
astropy = "^6.0.0"
rich = "^13.7.0"
pyyaml = "^6.0.1"
schema = "^0.7.5"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pandas-stubs = "^2.1.4.231227"
types-pyyaml = "^6.0.12.12"

[tool.poetry.scripts]
mercury = 'mercury.mercury:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
