[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'hbstools'
version = '0.2.0'
description = "A tool for searching GRBs in data from HERMES-Pathfinder"
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
  'numpy>=1.26.3',
  'pandas>=2.1.4',
  'matplotlib>=3.8.2',
  'astropy>=6.0.0',
  'rich>=13.7.0',
  'click>=8.0.0',
  'pyyaml>=6.0.1',
  'schema>=0.7.5',
]
keywords = [
  "HERMES", "HERMES-Pathfinder",
  "Gamma-ray Burst", "GRB",
  "Poisson-FOCuS"
]
license = {file = 'LICENSE'}
authors = [
  {name = 'Giuseppe Dilillo', email = 'peppedilillo@gmail.com'},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C",
]

[project.optional-dependencies]
dev = [
  "black>=23.12.1",
  "isort>=5.13.2",
  "mypy>=1.8.0",
  "pandas-stubs>=2.1.4",
  "types-pyyaml>=6.0.12",
]

[project.scripts]
mercury = 'mercury.mercury:cli'